--- a/demo.ipynb
+++ b/demo.ipynb
@@ -12,13 +12,12 @@
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' # Disable tensorflow debugging logs\n",
     "import tensorflow as tf\n",
-    "import math\n",
-    "import matplotlib.pyplot as plt\n",
     "from model import Generator\n",
     "from utils import Loader, Config\n",
     "from trainer import LadaGAN\n",
     "from config import config\n",
     "from utils import deprocess\n",
+    "from plot_utils import plot_single_head\n",
     "%matplotlib inline"
    ]
   },
@@ -153,11 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "resolutions = 3\n",
-    "heads = 4\n",
-    "direct = './'\n",
     "n = 16\n",
-    "\n",
     "noise_seed = tf.random.normal(\n",
     "    [n, conf.noise_dim], seed=conf.test_seed\n",
     ")"
@@ -166,24 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "97398407-7239-467d-b24e-589ba542e78b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def get_map(resolution, head):\n",
-    "    h = head\n",
-    "    r = resolution\n",
-    "    map_size = int(math.sqrt(maps[r][0][0].shape[0])) # get map high and width \n",
-    "    b = maps[r][:, h].shape[0]\n",
-    "    reshaped_maps = tf.reshape(maps[r][:, h], [b, map_size, map_size, 1])\n",
-    "    return reshaped_maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "43cc7cac-a97e-460d-b213-d619a964cc83",
    "metadata": {
     "tags": []
@@ -192,18 +169,13 @@
    "source": [
     "predictions, maps = gan.ema_generator(noise_seed, training=False)\n",
     "predictions = tf.clip_by_value(deprocess(predictions), 0.0, 255.0)\n",
-    "predictions = tf.cast(predictions, tf.uint8).numpy()\n",
-    "\n",
-    "h = 1\n",
-    "maps32 = get_map(2, h)\n",
-    "maps16 = get_map(1, h)\n",
-    "maps8 = get_map(0, h)"
+    "predictions = tf.cast(predictions, tf.uint8).numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a0b080c1-6a23-4a59-855d-e1024748776d",
+   "execution_count": 8,
+   "id": "798ee20a-630e-477c-99ea-0515427d75a2",
    "metadata": {
     "tags": []
    },
@@ -220,36 +192,7 @@
     }
    ],
    "source": [
-    "# Create a figure with multiple subplots\n",
-    "fig, axes = plt.subplots(4, n, figsize=(n*2, 4*2))\n",
-    "\n",
-    "# Plot the images in the first row\n",
-    "for i in range(n):\n",
-    "    axes[0, i].imshow(predictions[i])\n",
-    "    axes[0, i].axis('off')\n",
-    "\n",
-    "# Plot maps32 in the second row\n",
-    "for i in range(n):\n",
-    "    axes[1, i].imshow(maps32[i, :, :, 0])\n",
-    "    axes[1, i].axis('off')\n",
-    "\n",
-    "# Plot maps16 in the third row\n",
-    "for i in range(n):\n",
-    "    axes[2, i].imshow(maps16[i, :, :, 0])\n",
-    "    axes[2, i].axis('off')\n",
-    "\n",
-    "# Plot maps8 in the fourth row\n",
-    "for i in range(n):\n",
-    "    axes[3, i].imshow(maps8[i, :, :, 0])\n",
-    "    axes[3, i].axis('off')\n",
-    "\n",
-    "# Remove the titles\n",
-    "for ax in axes.ravel():\n",
-    "    ax.set_title(\"\")\n",
-    "\n",
-    "# Display the plot\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plot_single_head(predictions, maps)"
    ]
   }
  ],
